Fixing jumping bug, height issue.

--- a/sections/selettore-tabs/style.less
+++ b/sections/selettore-tabs/style.less
@@ -6,13 +6,15 @@
 		height: 100%;
 		margin-top: 0px;
 		top: 0px;
-		display: block;
+		display: inline-block;
+		width: 100%;
 		.tab-slide{
 			opacity: 0;
 			display: block;
 			top:0px;
 			position: absolute;
 			margin-top: 10%;
+			width: 100%;
 		}
 		.media{
 			text-align: center;
